FunctionSelectionViewControllerへの画面遷移実装

--- a/TimerAssessment/FunctionSelection/FunctionSelection.storyboard
+++ b/TimerAssessment/FunctionSelection/FunctionSelection.storyboard
@@ -40,6 +40,13 @@
                                     <action selector="toFIMTableVC:" destination="Ga9-a2-xr2" eventType="touchUpInside" id="Tao-4l-kzg"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vU0-n9-Mrr">
+                                <rect key="frame" x="40" y="198" width="333" height="71"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cpP-KG-AGu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -53,11 +60,12 @@
                     <navigationItem key="navigationItem" id="rSb-08-pdM">
                         <barButtonItem key="leftBarButtonItem" image="chevron.backward" catalog="system" id="cUS-Ca-MX6">
                             <connections>
-                                <segue destination="oel-Pm-gZu" kind="unwind" unwindAction="backToTargetPersonTableViewControllerWithSegue:" id="o5O-uo-UP3"/>
+                                <segue destination="oel-Pm-gZu" kind="unwind" unwindAction="backToAssessmentItemTableViewControllerWithSegue:" id="qg3-Jg-rdo"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="assessmentItemLabel" destination="vU0-n9-Mrr" id="KsI-rn-vbV"/>
                         <outlet property="assessmentListButton" destination="bKZ-3w-6GD" id="GI3-xc-kTy"/>
                         <outlet property="asssessmentButton" destination="eoC-gw-awt" id="UqV-fO-7ap"/>
                     </connections>
